# dvs

./: .gitmodules  TODO  i2c_spi_calc.py  particle_plot.py  vscode_settings
src/: CMakeLists.txt
src/applications/gui_testing/: button.cpp  button.h  checkbox.cpp  checkbox.h  gui_element.cpp  gui_element.h  gui_pane.cpp  gui_pane_events.cpp  opengl_primitives.cpp  opengl_primitives.h  slider.cpp  slider.h
src/applications/module_application/: code_prototyping.cpp
src/applications/real_time_gui/: CMakeLists.txt  rt_main_window.cpp
src/applications/text_rendering/: CMakeLists.txt  gui_pane.cpp  gui_pane.h  main_window.cpp  shader.h  text_rendering.cpp  text_rendering.h  vertex_buffer.h
src/applications/text_rendering/opengl_textrendering/: font_atlas.cpp  font_atlas.h  geom_store.cpp  geom_store.h  label_text_store.cpp  label_text_store.h
src/cmake/: linux.cmake  macos.cmake  toolchain-mingw64.cmake  windows.cmake
src/common/: socket_compat.h
src/demos/demo_app/: CMakeLists.txt
src/demos/demo_app/tests/: fake_fem.h  hexagon_rods.h  klein.h  small.h  wave_equation.h
src/demos/plot_stuff/gui_backend/: gui_backend.cpp
src/demos/plot_stuff/hello_c/: hello_c.c
src/demos/plot_stuff/hello_cpp/: hello_cpp.cpp
src/interfaces/c/duoplot/: gui_internal.h  internal.h  plot_functions.h
src/interfaces/cpp/duoplot/: control_functions.h  logging.h  plot_properties.h
src/interfaces/python/duoplot/: duoplot.py
src/interfaces/test/cpp/: CMakeLists.txt  communication_header_object_test.cpp  communication_header_test.cpp  fillable_uint8_array_test.cpp  plot_properties_test.cpp  property_set_test.cpp
src/main_application/: CMakeLists.txt  background_renderer.h  events.h  filesystem.h  gui_element.h  gui_element_state.h  gui_elements.h  gui_tab.cpp  gui_window.cpp  input_data.h  main.cpp  main_window.cpp  main_window.h  main_window_receive.cpp  main_window_serial.cpp  platform_paths.cpp  plot_data_handler.cpp  plot_data_handler.h  plot_pane.cpp  plot_pane.h  point_selection.h  shader.h  tray_icon.cpp  tray_icon.h  user_supplied_properties.cpp  user_supplied_properties.h
src/main_application/axes/: axes_interactor.cpp  axes_interactor.h  axes_renderer.cpp  axes_side_configuration.h  grid_numbers.cpp  grid_numbers.h  legend_renderer.cpp  legend_renderer.h  plot_box_grid.h  plot_pane_background.cpp  point_selection_box.h  text_rendering.cpp  text_rendering.h  zoom_rect.cpp  zoom_rect.h
src/main_application/axes/structures/: axes_limits.cpp  axes_limits.h  axes_settings.h  grid_vectors.h  view_angles.cpp  view_angles.h
src/main_application/axes/text_rendering_impl/: font_atlas.cpp  font_atlas.h  label_text_store.cpp  label_text_store.h
src/main_application/communication/: data_receiver.cpp  data_receiver.h  received_data.h
src/main_application/misc/: rgb_triplet.h
src/main_application/old/: layout_tools_window.cpp  layout_tools_window.h  test_code.cpp
src/main_application/opengl_low_level/: opengl_header.h  vertex_buffer.h
src/main_application/plot_objects/: utils.h
src/main_application/plot_objects/draw_mesh/: draw_mesh.h
src/main_application/plot_objects/fast_plot2d/: fast_plot2d.h
src/main_application/plot_objects/fast_plot3d/: fast_plot3d.h
src/main_application/plot_objects/im_show/: im_show.cpp  im_show.h
src/main_application/plot_objects/line_collection2/: line_collection2.h
src/main_application/plot_objects/line_collection3/: line_collection3.h
src/main_application/plot_objects/plot2d/: plot2d.h
src/main_application/plot_objects/plot3d/: plot3d.cpp  plot3d.h
src/main_application/plot_objects/plot_collection2/: plot_collection2.h
src/main_application/plot_objects/plot_collection3/: plot_collection3.h
src/main_application/plot_objects/plot_object_base/: plot_object_base.cpp  plot_object_base.h
src/main_application/plot_objects/scatter/: scatter.h
src/main_application/plot_objects/scatter3/: scatter3.cpp  scatter3.h
src/main_application/plot_objects/screen_space_primitive/: screen_space_primitive.h
src/main_application/plot_objects/stem/: stem.h
src/main_application/project_state/: configuration_agent.cpp  configuration_agent.h  element_settings.cpp  helper_functions.h  other_gui_settings.cpp  project_settings.cpp  project_settings.h  scrolling_text_settings.cpp
src/main_application/serial_interface/: serial_port.cpp  serial_port.h
src/qt_application/: ARCHITECTURE_REFACTOR_STATUS.md  ARCHITECTURE_SUMMARY.md  CMakeLists.txt  LUMOSCONFIG_INTEGRATION.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  README.md  WXWIDGETS_ANALYSIS.md  cmdl_output_window.cpp  cmdl_output_window.h  color_utils.h  editing_overlay.cpp  editing_overlay.h  filesystem.h  gui_element.h  gui_elements.cpp  gui_elements.h  gui_window.cpp  gui_window.h  help_pane.cpp  help_pane.h  main.cpp  main_window.cpp  main_window.h  outer_converter.h  platform_paths.h  plot_data_conversion.cpp  plot_data_handler.cpp  plot_data_handler.h  plot_pane.cpp  plot_pane.h  point_selection.cpp  settings_window.cpp  settings_window.h  tab_button.cpp  tab_button.h  topic_text_output_window.cpp  topic_text_output_window.h  tray_icon.cpp  tray_icon.h  (+3 more)
src/qt_application/axes/: axes_interactor.h  axes_renderer.cpp  axes_side_configuration.h  grid_numbers.cpp  grid_numbers.h  legend_properties.h  legend_renderer.cpp  point_selection_box.h  text_rendering.h  zoom_rect.h
src/qt_application/communication/: received_data.cpp
src/qt_application/opengl_low_level/: vertex_buffer.h
src/qt_application/plot_objects/: utils.h
src/qt_application/project_state/: configuration_agent.h  helper_functions.h  plot_pane_settings.cpp
src/resources/shaders/: simple_shader.fs  simple_shader.vs
src/system_test/: CMakeLists.txt  main.cpp
src/system_test/advanced_cpp/: append_properties.h  axes_proportions.h  dynamic_plotting.h  object_transform.h  plot2.h  plot3.h  scatter2.h  scatter3.h  surf.h  updateable_plotting.h
src/system_test/basic_c/: tests.c
src/system_test/basic_cpp/: tests.h
src/system_test/two_way_comm/: two_way_comm.cpp
src/test/number_formatting/: number_formatting_test.cpp
(+71 files in other folders)
